2008-04-13  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* CBinding.addin.xml: Commented out a wrong extension point. Will find the
	  correct one later.

2008-04-12  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/PackageDetails.cs, Gui/EditPackagesDialog.cs, CBinding.addin.xml,
	  ProjectPad/ProjectPackagesFolderNodeBuilder.cs,
	  ProjectPad/ProjectPackageNodeBuilder.cs, CBinding.mdp,
	  Project/Package.cs, Project/ProjectPackageCollection.cs,
	  Project/ProjectPackageEventArgs.cs, Project/ProjectPackage.cs,
	  Project/CProject.cs, gtk-gui/CBinding.PackageDetails.cs,
	  gtk-gui/CBinding.EditPackagesDialog.cs,
	  gtk-gui/CBinding.CodeGenerationPanel.cs, gtk-gui/gui.stetic,
	  Makefile.am, Compiler/CCompiler.cs: Changed the class ProjectPackage to
	  just Package and created a package details dialog that can be seen from
	  the EditPackagesDialog.

2008-04-12  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/EditPackagesDialog.cs, gtk-gui/CBinding.EditPackagesDialog.cs,
	  gtk-gui/gui.stetic: Fixed bug 369688 - Find as you type doesn't work in
	  the dialog where you select the project references.

2008-04-12  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/EditPackagesDialog.cs: Alphabetically sort the list of packages and
	  did some formatting.

2008-04-11  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* CBinding.addin.xml, Gui/CTextEditorExtension.cs,
	  Project/CProject.cs: Enable source/header swapping with a keybinding
	  and menu items

2008-04-10  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/EditPackagesDialog.cs: Fixed bug 368755: "MD should not guess if a
	  reference is managed or unmanaged relying on cflags"

2008-04-11  Lluis Sanchez Gual <lluis@novell.com> 

	* CBinding.addin.xml: Use the new mime type extension to register new
	  file types.

2008-04-03  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Parser/TagDatabaseManager.cs: Fixed mismatched single-quote.
